# CST_Auto_Remidiator

./: .gitignore  README.md  compiler_workflow_stages_1_to_4.md  diagnose_output.txt  explanation.md  explanation2.md  pyproject.toml  report.md  stage6_verification_prompt.md  verify_basic.py  verify_basic_out.txt  verify_diff.py  verify_diff2.py  verify_diff_capture.txt  verify_diff_out.txt  workbench_testing.yml
edge_cases/expressions/: escaped_malformed.yml  nested_adjacent.yml  quoted_block.yml
edge_cases/gha_features/: env_scopes.yml  matrix_defaults.yml  multi_job_steps.yml  reusable_composite.yml
fixtures/: bail_collision.expected.json  bail_collision.yml  bail_sink.expected.json  bail_sink.yml  block_scalar_flagged.expected.json  block_scalar_flagged.yml  clean_passthrough.expected.json  clean_passthrough.expected.yml  clean_passthrough.yml  clean_passthrough2.yml  crlf_preservation.expected.json  crlf_preservation.expected.yml  crlf_preservation.yml
scripts/: diagnose_corrected.py  regenerate_expected.py
testing/: README.md  run_scenarios.py  tmp_corrected.yml
tests/: test_all_workflows.py  test_already_remediated.py  test_classify.py  test_classify_stage4.py  test_fixtures.py  test_ingest.py  test_massive_edge_cases.py  test_nodes.py  test_parser.py  test_pipeline_integration.py  test_stage2_comprehensive.py  test_stage3_comprehensive.py  test_stage4_comprehensive.py  test_stage5.py  test_stage5_comprehensive.py  test_stage6_comprehensive.py  test_stage6_integration.py  test_stage7_serializer.py  test_stage8_verify.py  test_validate.py
(+84 files in other folders)
